--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "google-map-react": "^0.24.0",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
     "react": "^15.5.4",
