--- a/package.json
+++ b/package.json
@@ -36,8 +36,11 @@
     "google-map-react": "^0.24.0",
     "jquery": "^3.2.1",
     "material-ui": "^0.18.0",
+    "moment": "^2.18.1",
     "react": "^15.5.4",
+    "react-addons-shallow-compare": "^15.5.2",
     "react-bootstrap": "^0.31.0",
+    "react-dates": "^12.0.0",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-scroll": "^1.5.2",
