--- a/package.json
+++ b/package.json
@@ -32,16 +32,20 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "airbnb-prop-types": "^2.5.4",
     "classnames": "^2.2.5",
     "google-map-react": "^0.24.0",
     "jquery": "^3.2.1",
+    "lodash.omit": "^4.5.0",
     "material-ui": "^0.18.0",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-addons-shallow-compare": "^15.5.2",
     "react-bootstrap": "^0.31.0",
     "react-dates": "^12.0.0",
     "react-dom": "^15.5.4",
+    "react-moment-proptypes": "^1.4.0",
     "react-router": "^4.1.1",
     "react-scroll": "^1.5.2",
     "react-slick": "^0.14.11",
