--- a/package.json
+++ b/package.json
@@ -11,44 +11,44 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "image-webpack-loader": "^3.3.0",
-    "node-sass": "^4.5.2",
-    "postcss-loader": "^1.3.3",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-env": "1.4.0",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-3": "6.24.1",
+    "copy-webpack-plugin": "4.0.1",
+    "css-loader": "0.28.1",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "html-loader": "0.4.5",
+    "html-webpack-plugin": "2.28.0",
+    "image-webpack-loader": "3.3.0",
+    "node-sass": "4.5.2",
+    "postcss-loader": "1.3.3",
+    "sass-loader": "6.0.3",
+    "style-loader": "0.17.0",
+    "url-loader": "0.5.8",
+    "webpack": "2.5.0",
+    "webpack-dev-server": "2.4.5"
   },
   "dependencies": {
-    "airbnb-prop-types": "^2.5.4",
-    "classnames": "^2.2.5",
-    "google-map-react": "^0.24.0",
-    "jquery": "^3.2.1",
-    "lodash.omit": "^4.5.0",
-    "moment": "^2.18.1",
-    "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-addons-shallow-compare": "^15.5.2",
-    "react-bootstrap": "^0.31.0",
-    "react-dates": "^12.0.0",
-    "react-dom": "^15.5.4",
-    "react-moment-proptypes": "^1.4.0",
-    "react-router": "^3.0.5",
-    "react-scroll": "^1.5.2",
-    "react-slick": "^0.14.11",
-    "react-tap-event-plugin": "^2.0.1",
-    "react-waypoint": "^7.0.3"
+    "airbnb-prop-types": "2.5.4",
+    "classnames": "2.2.5",
+    "google-map-react": "0.24.0",
+    "jquery": "3.2.1",
+    "lodash.omit": "4.5.0",
+    "moment": "2.18.1",
+    "prop-types": "15.5.10",
+    "react": "15.5.4",
+    "react-addons-shallow-compare": "15.5.2",
+    "react-bootstrap": "0.31.0",
+    "react-dates": "12.0.0",
+    "react-dom": "15.5.4",
+    "react-moment-proptypes": "1.4.0",
+    "react-router": "3.0.5",
+    "react-scroll": "1.5.2",
+    "react-slick": "0.14.11",
+    "react-tap-event-plugin": "2.0.1",
+    "react-waypoint": "7.0.3"
   }
 }
